chore(repo): add CI gate, one-click run scripts, and deployment tooling
新增 GitHub Actions CI: 后端单元/集成/并发测试与前端构建门禁，配套 .dockerignore 与 .gitattributes。

新增根目录与 scripts/ 下的一键脚本: start-all / stop-all / run-backend-test / run-frontend-test 的 bat 与 PowerShell 双版本，附工具链解析(toolchain.ps1)。

停止跟踪 .env 明文(改由 .env.example 模板 + 运行时注入)，并补充忽略规则防止再次误提交。

更新 README 与部署/设计/答辩文档，补充真实运行截图与 Apache-2.0 LICENSE。